<resources>
    <string name="app_name">MyNewBook</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="about_app">About App</string>
    <string name="book_hub">Book Hub</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="list_of_item">List of Item</string>
    <string name="sample_description">Sample Description</string>
    <string name="about_the_book">About The Book</string>
    <string name="_4_3">4.3</string>
    <string name="rs_299">Rs. 299</string>
    <string name="name_of_author">Name of Author</string>
    <string name="name_of_book">Name of book</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="hello_world">Hello World</string>
    <string name="android_inc">Android Inc.</string>
    <string name="rs_499">Rs. 499</string>
    <string name="_4_5">4.5</string>
    <string name="sort">Sort</string>
</resources>