<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/liContent"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1.5"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:text="@string/name_of_book"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtBookName"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:text="@string/name_of_author"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtBookAuthor"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:text="@string/rs_299"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </RelativeLayout>
                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/_4_3"
                    android:textSize="18sp"
                    android:textColor="#ffca28"
                    android:padding="4dp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_ratings" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/liContent">
            <TextView
                android:id="@+id/txtAboutTheBookStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_the_book"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:padding="4dp"
                android:layout_marginTop="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtBookDesc"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/sample_description"
                    android:layout_below="@+id/txtAboutTheBookStatic"
                    android:textSize="18sp"/>
                <Button
                    android:id="@+id/btnAddToFav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_favorite"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="20dp"
                    android:layout_below="@+id/txtBookDesc"
                    android:textColor="@color/white"
                    android:padding="5dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

</RelativeLayout>

</RelativeLayout>